--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_COCKTAILS_API_URL=https://www.thecocktaildb.com/api/json/v1/1/filter.php?c=Cocktail
 VITE_RECIPE_API_URL=https://www.thecocktaildb.com/api/json/v1/1/lookup.php?i=
+VITE_SEARCH_API_URL=https://www.thecocktaildb.com/api/json/v1/1/search.php?s=
